# YoutubeTranscript

./: ajZtcG2OlhI_segments.csv  ajZtcG2OlhI_segments_summary.txt  classifier.py  main.py  pyproject.toml  requirements.txt  summariser.py  transcript.py  upgrade_packages.py
