[tool.poetry]
name = "repl-nix-youtube-transcript"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_youtube_transcript"}]

[tool.poetry.dependencies]
python = "^3.10"
classifier = "^2.0"
openai = "^1.6.1"
youtube-transcript-api = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
